B&L QA/objects/Sales_Data__c.object
<CustomObject>
    <description>To store Sales data by Product, for Ship Tos</description>
    <fields>
        <fullName>Doorway_Account_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Doorway</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Data (Doorway)</relationshipLabel>
        <relationshipName>Sales_Data1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legacy_System_Id__c</fullName>
        <externalId>true</externalId>
        <label>Legacy System Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Legacy_System_Name__c</fullName>
        <label>Legacy System Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prior_Year_QTD__c</fullName>
        <label>Prior Year Qtr.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Prior_Year_YTD__c</fullName>
        <label>Full Prior Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <label>Product Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QTD__c</fullName>
        <label>Current QTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Ship_To_Account__c</fullName>
        <description>This will be populated with Ship To SFDC Account Id</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Data</relationshipLabel>
        <relationshipName>Sales_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Units_Prior_QTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Units Prior QTD</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_Prior_YTD__c</fullName>
        <label>Units Prior YTD</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_QTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Units QTD</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Units_YTD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Units YTD</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>YTD__c</fullName>
        <label>Current YTD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Sales Data</label>
    <nameField>
        <displayFormat>SD{0000000000}</displayFormat>
        <label>Sales Data Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>